force-app/main/default/objects/AmReg_Order_Item__c/AmReg_Order_Item__c.object-meta.xml
<CustomObject>
    <label>AmReg Order Item</label>
    <nameField>
        <label>AmReg Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AmReg Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>