force-app/main/default/objects/AmReg_Order_Item__c/fields/Address_Attention__c.field-meta.xml
<CustomField>
    <fullName>Address_Attention__c</fullName>
    <label>Address Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>