force-app/main/default/objects/AmReg_Order_Item__c/fields/AmReg_Order__c.field-meta.xml
<CustomField>
    <fullName>AmReg_Order__c</fullName>
    <label>AmReg Order</label>
    <referenceTo>AmReg_Order__c</referenceTo>
    <relationshipLabel>AmReg Order Items</relationshipLabel>
    <relationshipName>AmReg_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>