force-app/main/default/objects/AmReg_Order_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AmReg Order Items</relationshipLabel>
    <relationshipName>AmReg_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>