force-app/main/default/objects/AmReg_Order_Item__c/fields/Contact_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_SF_ID__c</fullName>
    <label>Contact SF ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>