force-app/main/default/objects/AmReg_Order_Item__c/fields/Date_Shipped_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped_To_Customer__c</fullName>
    <label>Date Shipped To Customer</label>
    <type>Date</type>
</CustomField>