force-app/main/default/objects/AmReg_Order_Item__c/fields/FSP_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Opportunity_ID__c</fullName>
    <description>Five Star Opportunity Id coming from American Registry</description>
    <label>FSP Opportunity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>