force-app/main/default/objects/AmReg_Order_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AmReg Order Items</relationshipLabel>
    <relationshipName>AmReg_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>