force-app/main/default/objects/AmReg_Order_Item__c/fields/Shipping_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method_Name__c</fullName>
    <label>Shipping Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>