force-app/main/default/objects/AmReg_Order_Item__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>